# Gestion_Trajets

./: .gitignore  app.py  config.py  pyproject.toml  requirements.txt
Services/: Calculations.py  Styles.py  __init__.py  test_connexion_supabase.py
core/: core_ui.py
database/: fuel_repository.py  historical_repository.py  history_repository.py  supabase_client.py  trip_repository.py
models/: dashboard_kpis.py  fuel.py  historical.py  services_kpis.py  trip.py
onglets/: CRUD_Trips.py  __init__.py  dashboard.py  historiques.py  services.py  sidebar.py
services/: dashboard_service.py  fuel_service.py  historiques_service.py  services_service.py  trip_service.py
theme/: 00_variables.css  10_header.css  20_sidebar.css  30_tabs.css  40_kpi_card.css  base.css  cards.css  inject_css.py  load_css.py  sidebar.css  style.css
ui/: forms  header.py  main_page.py  sidebar.py
ui/components/: header.py  kpi_card.py  pro_tabs.py
ui/components/cards/: dashboard_kpi_card.py  header_card.py  kpi_card.py  onglets.py  service_card.py  tabs_card.py
ui/components/forms/: fuel_form.py  sidebar.py  trip_form.py
ui/config/: aggrid_local_FR.py
ui/tabs/: dashboard.py
utils/: calculations.py  formatting.py  injection_css_global.py
