[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gestion-trajets"
version = "0.1.0"
description = "Application de gestion des trajets avec Streamlit et Supabase"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Mohamed Diop", email = "your-email@example.com"}
]
license = {text = "MIT"}

dependencies = [
    "streamlit==1.52.1",
    "supabase==2.25.0",
    "supabase-auth==2.25.0",
    "supabase-functions==2.25.0",
    "python-dotenv==1.2.1",
    "pandas==2.3.3",
    "plotly==6.5.0",
    "numpy==2.3.5",
    "requests==2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["Services", "onglets"]

[tool.setuptools.package-data]
Services = ["*.py"]
onglets = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=Services --cov=onglets"
